force-app/main/default/objects/SVMXA360__SM_MaintenancePlanAsset__c/SVMXA360__SM_MaintenancePlanAsset__c.object-meta.xml
<CustomObject>
    <description>This object is utilized in relation to the A360 Maintenance Plan object. It is used to store the information for assets that are covered as maintenance assets under the maintenance plan.</description>
    <label>A360 Maintenance Plan Asset</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>A360 Maintenance Plan Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>