force-app/main/default/objects/SVMXA360__SM_MaintenancePlanAsset__c/fields/SVMXA360__Asset__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated Asset which is covered under the maintenance plan.</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>A360 Maintenance Plan Assets</relationshipLabel>
    <relationshipName>A360_Maintenance_Plan_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>