force-app/main/default/objects/SVMXA360__SM_MaintenancePlanAsset__c/fields/SVMXA360__MaintenancePlan__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MaintenancePlan__c</fullName>
    <description>The associated Maintenance plan under which the asset is covered.</description>
    <label>A360 Maintenance Plan</label>
    <referenceTo>SVMXA360__SM_MaintenancePlan__c</referenceTo>
    <relationshipLabel>A360 Maintenance Plan Assets</relationshipLabel>
    <relationshipName>A360_Maintenance_Plan_Assets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>