force-app/main/default/objects/SVMXA360__SM_MaintenancePlanAsset__c/fields/SVMXA360__WorkType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__WorkType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated work type. Work orders generated from the maintenance asset’s maintenance plan will inherit the maintenance asset’s work type duration, required skills and products, and linked articles. If this field is left unpopulated, the work order will inherit the work type from the maintenance plan itself.</description>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>A360 Maintenance Plan Assets</relationshipLabel>
    <relationshipName>A360_Maintenance_Plan_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>